--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,42 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+h1 {
+    position: relative;
+    color: aliceblue;
+  }
+  
+  h1::before {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 4px;
+      border-radius: 4px;
+      background-color: #ffffff;
+      bottom: 0;
+      left: 0;
+      transform-origin: right;
+      transform: scaleX(0);
+      transition: transform .3s ease-in-out;
+    }
+  
+  h1:hover::before {
+    transform-origin: left;
+    transform: scaleX(1);
+  }
+
+  .custom-background {
+    @apply w-full h-full;
+    --s: 200px;
+    --c1: #b2b2b2;
+    --c2: #ffffff;
+    --c3: #d9d9d9;
+    --_g: var(--c3) 0 120deg, #0000 0;
+    background: conic-gradient(from -60deg at 50% calc(100% / 3), var(--_g)),
+                conic-gradient(from 120deg at 50% calc(200% / 3), var(--_g)),
+                conic-gradient(from 60deg at calc(200% / 3), var(--c3) 60deg, var(--c2) 0 120deg, #0000 0),
+                conic-gradient(from 180deg at calc(100% / 3), var(--c1) 60deg, var(--_g)),
+                linear-gradient(90deg, var(--c1) calc(100% / 6), var(--c2) 0 50%, var(--c1) 0 calc(500% / 6), var(--c2) 0);
+    background-size: calc(1.732 * var(--s)) var(--s);
+  }
